--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -74,6 +74,12 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+  --ion-toolbar-background:#4777DB;
+ 
+}
+
+ion-content {
+  --ion-background-color:#F7F8FE;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -234,3 +240,4 @@ http://ionicframework.com/docs/theming/ */
     --ion-card-background: #1e1e1e;
   }
 }
+ 
